--- a/src/app/orbit-list/orbit-list.component.css
+++ b/src/app/orbit-list/orbit-list.component.css
@@ -26,3 +26,11 @@ th, td {
 	margin: 5px 10px;
 	padding: 6px;
 }
+
+.even {
+	background-color: rgb(134, 233, 134);
+}
+
+.odd {
+	background-color: rgb(162, 241, 241);
+}
