--- a/src/app/orbit-list/orbit-list.component.html
+++ b/src/app/orbit-list/orbit-list.component.html
@@ -6,7 +6,7 @@
         <th>Orbit Type</th>
         <th>Launch Date</th>
     </tr>
-    <tr class="data-row" *ngFor = "let satellite of satellites">
+    <tr class="data-row" *ngFor = "let satellite of satellites; even as isEven; odd as isOdd" [ngClass] = "{ 'even' : isEven, 'odd' : isOdd}">
         <td>{{satellite.name}}</td> 
         <td [class.warning]="satellite.isSpaceDebris()">{{satellite.type}}</td>
         <td>{{satellite.operational}}</td>
